--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -100,132 +100,28 @@ MACRO SEISMIC NETWORK
         group = {article}
 }
 
+
 ##############################################################################
- RUWAI
+RELATED
 ##############################################################################
-@report{mertl_performance_2017,
-	title = {Performance of the seismic data recorder Ruwai},
-	pages = {11},
-	author = {Mertl, Stefan},
-	date = {2017-04-04},
-	number = {20170201-01},
-        version = {1.0},
-	institution = {Mertl Research GmbH},
-	type = {Technical Report},
-        local_url = {20170207-seisrockht-sm-performance_of_the_ruwai_recording_system.pdf},
-        project = {ruwai},
-        group = {article}
+@article{berka_zur_2015,
+	title = {Zur {Geologie} der großen {Beckengebiete} des {Ostalpenraumes}},
+	volume = {64},
+	language = {de},
+	journal = {Abhandlungen der Geologischen Bundesanstalt},
+	author = {Berka, Rudolf},
+	month = dec,
+	year = {2015},
+	pages = {71--141},
+	file = {Berka - Zur Geologie der großen Beckengebiete des Ostalpen.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/B3IPWC99/Berka - Zur Geologie der großen Beckengebiete des Ostalpen.pdf:application/pdf}
 }
 
-@report{mertl_electromagnetic_2017,
-	title = {Electromagnetic Interference of the Ruwai recording system},
-	pages = {9},
-	author = {Mertl, Stefan},
-	date = {2017-04-04},
-	number = {20170217-01},
-        version = {1.0},
-	institution = {Mertl Research GmbH},
-	type = {Technical Report},
-        local_url = {20170217-seisrockht-sm-emi_ruwai_recording_system.pdf},
-        project = {ruwai},
-        group = {article}
-}
-
-@report{mertl_assembly_2017,
-	title = {Assembly of the seismic data recorder Ruwai},
-	pages = {33},
-	author = {Mertl, Stefan},
-	date = {2017-04-04},
-	number = {20170227-01},
-        version = {1.0},
-	institution = {Mertl Research GmbH},
-	type = {Technical Report},
-        local_url = {20170227-seisrockht-sm-assembly_of_the_ruwai_recording_system.pdf},
-        project = {ruwai},
-        group = {article}
-}
-
-@article{mertl_ruwai_2018,
-	location = {Vienna, Austria},
-	title = {Ruwai - an open hardware seismic data recorder},
-	url = {https://meetingorganizer.copernicus.org/EGU2018/EGU2018-9497.pdf},
-	type = {Poster},
-	howpublished = {Poster},
-	note = {European Geoscience Union General Assembly},
-	author = {Mertl, Stefan},
-	date = {2018-04-11},
-	langid = {english},
-	file = {Mertl - 2018 - Ruwai - an open hardware seismic data recorder.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/CU5TP3NW/Mertl - 2018 - Ruwai - an open hardware seismic data recorder.pdf:application/pdf},
-        local_url = {Mertl_-_2018_-_Ruwai_-_an_open_hardware_seismic_data_recorder.pdf},
-        project = {ruwai},
-        group = {conference}
+@article{giardini_etal_seismic_2013,
+	title = {Seismic {Hazard} {Harmonization} in {Europe} ({SHARE}): {Online} {Data} {Resource}},
+	url = {http://www.efehr.org/en/Documentation/specific-hazard-models/europe/overview/},
+	doi = {10.12686/SED-00000001-SHARE},
+	author = {{Giardini et.al.}},
+	year = {2013}
 }
 
 
-
-
-@book{callaghan_interact_2017,
-	title = {INTERACT: stories of Arctic science},
-	isbn = {978-87-93129-11-5},
-	url = {https://eu-interact.org/publication/1349/},
-	shorttitle = {{INTERACT}},
-	pagetotal = {184},
-	author = {Callaghan, T. V and Savela, Hannele and {Seventh Framework Programme (European Commission)} and {DCE - Nationalt Center for Miljø og Energi} and {Interact (Organization)}},
-	date = {2017},
-	langid = {english},
-	note = {OCLC: 1057268595},
-	file = {Callaghan et al. - 2017 - INTERACT stories of Arctic science.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/Q55CLX88/Callaghan et al. - 2017 - INTERACT stories of Arctic science.pdf:application/pdf}
-}
-
-@inproceedings{mcgee_musification_2016,
-	location = {Canberra, Australia},
-	title = {Musification of Seismic Data},
-	isbn = {978-0-9670904-3-6},
-	url = {http://hdl.handle.net/1853/56569},
-	doi = {10.21785/icad2016.021},
-	eventtitle = {The 22nd International Conference on Auditory Display},
-	pages = {201--204},
-	booktitle = {Proceedings of the 22nd International Conference on Auditory Display - {ICAD} 2016},
-	publisher = {The International Community for Auditory Display},
-	author = {McGee, Ryan and Rogers, David},
-	urldate = {2019-10-04},
-	date = {2016-07},
-	langid = {english},
-	file = {McGee und Rogers - 2016 - Musification of Seismic Data.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/XRTVXJTR/McGee und Rogers - 2016 - Musification of Seismic Data.pdf:application/pdf}
-}
-
-@article{mcnamara_ambient_2004,
-	title = {Ambient Noise Levels in the Continental United States},
-	volume = {94},
-	url = {http://www.bssaonline.org/content/94/4/1517.abstract},
-	doi = {10.1785/012003001},
-	pages = {1517--1527},
-	number = {4},
-	journaltitle = {Bulletin of the Seismological Society of America},
-	author = {McNamara, Daniel E. and Buland, Raymond P.},
-	date = {2004},
-	file = {mcnamara_buland_2004_ambient_noise_levels_in_the_continental_united_states.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/TXUJREZB/mcnamara_buland_2004_ambient_noise_levels_in_the_continental_united_states.pdf:application/pdf}
-}
-
-@article{scales_what_1998,
-	title = {What is noise?},
-	volume = {63},
-	pages = {1122--1124},
-	number = {4},
-	journaltitle = {Geophysics},
-	author = {Scales, John A. and Snieder, Roel},
-	date = {1998},
-	file = {scales_snieder_1998_what_is_noise.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/6KA5UGA4/scales_snieder_1998_what_is_noise.pdf:application/pdf}
-}
-
-@inproceedings{schwarz_state_2011,
-	location = {Paris},
-	title = {State of the Art in Sound Texture Synthesis},
-	eventtitle = {14 th Int. Conference on Digital Audio Effects ({DAFx}-11)},
-	pages = {12},
-	booktitle = {Proc. of the 14 th Int. Conference on Digital Audio Effects ({DAFx}-11)},
-	author = {Schwarz, Diemo},
-	date = {2011},
-	langid = {english},
-	file = {Schwarz - 2011 - State of the Art in Sound Texture Synthesis.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/CLWCX8YP/Schwarz - 2011 - State of the Art in Sound Texture Synthesis.pdf:application/pdf}
-}
