Added two references.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -33,6 +33,24 @@ MACRO SEISMIC NETWORK
         group = {article}
 }
 
+@article{bruckl_monitoring_2019,
+	title = {Monitoring von {Sprengerschütterungen} mit seismischen „low-cost“ {Sensoren}},
+	volume = {164},
+	issn = {1613-7531},
+	url = {https://doi.org/10.1007/s00501-019-00892-z},
+	doi = {10.1007/s00501-019-00892-z},
+	abstract = {In den Jahren 2017 und 2018 wurde im südlichen Wiener Becken ein Netz von seismischen „low-cost“ Sensoren zur Erfassung lokaler Erdbeben eingerichtet. In einem Umkreis von etwa 10 km erfassen diese Sensoren auch die von Gewinnungssprengungen im Steinbruch Dürnbach, Hohe Wand ausgehenden seismischen Wellen. Vergleichsmessungen mit einem geeichten Messsystem belegen die Eignung der Daten für das seismische Monitoring.},
+	language = {de},
+	number = {10},
+	urldate = {2020-01-09},
+	journal = {BHM Berg- und Hüttenmännische Monatshefte},
+	author = {Brückl, Ewald and Filz, Karl and Hochwartner, Roland and Mertl, Stefan and Stickler, Gerald and Zöhling, Stefan},
+	month = oct,
+	year = {2019},
+	pages = {431--437},
+	file = {brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/MUFC7JHJ/brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:application/pdf}
+}
+
 @unpublished{bruckl_scientic_2015,
 	location = {EGU General Assembly, Vienna},
 	title = {Scientiﬁc goals of SCHOOLS \& QUAKES},
@@ -45,6 +63,21 @@ MACRO SEISMIC NETWORK
 	file = {Brückl et al. - 2015 - Scientiﬁc goals of SCHOOLS & QUAKES.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/CZZG75DE/Brückl et al. - 2015 - Scientiﬁc goals of SCHOOLS & QUAKES.pdf:application/pdf},
         project = {macro_seismic_network},
         group = {conference}
+}
+
+@incollection{bruckl_seismological_2021,
+	title = {Seismological {Data} {Acquisition} and {Analysis} within the {Scope} of {Citizen} {Science}},
+	url = {https://www.intechopen.com/online-first/seismological-data-acquisition-and-analysis-within-the-scope-of-citizen-science},
+	abstract = {From 2017 till 2020 a low cost seismic sensor network was built in the southern Vienna Basin, Lower Austria, as a part of ongoing educational and citizen science projects. The purpose of the project is to inform society about the seismic activity in this area and to include authorities and interested citizens into data acquisition and exploitation. Near real time (NRT) seismic data are made accessible online. Seismic events are detected and archived automatically. The visualization of these events online facilitates instantaneously estimates of the extent of the shaking area and potential damage. Peak ground velocities (PGV) are related to macroseismic intensities (EMS-98) derived from reports about ground motion felt in the vicinity of the network stations. Observed amplitudes and travel times are modeled by simple, but effective relations. Traditional and innovative localization methods based on travel times and amplitudes are applied and analyzed with respect to data quality and localization accuracy. All results are accessible online and the computer code is open and applicable, e.g. for educational purposes.},
+	language = {en},
+	urldate = {2021-04-07},
+	booktitle = {Earthquakes},
+	publisher = {IntechOpen},
+	author = {Brückl, Ewald and Carniel, Peter and Mertl, Stefan and Meurers, Rita},
+	month = jan,
+	year = {2021},
+	doi = {10.5772/intechopen.95273},
+	file = {Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/T4UH9MRH/Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:application/pdf}
 }
 
 @unpublished{del_puy_papi_isaba_robust_2016,
