Added the category for filtering the publications. Fixed the TAB indents.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,5 +1,6 @@
 ##############################################################################
-MACRO SEISMIC NETWORK
+MSS TEAM
+Content created or contributed by members of the MSS Team.
 ##############################################################################
 
 @thesis{ableitinger_macroseismic_2016,
@@ -11,8 +12,8 @@ MACRO SEISMIC NETWORK
 	date = {2016-04-25},
 	note = {thesis-school},
 	file = {Ableitinger et al. - 2016 - MacroSeismic Network.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/GXRIF3SV/Ableitinger et al. - 2016 - MacroSeismic Network.pdf:application/pdf},
-        project = {macro_seismic_network},
-        group = {undergraduate_thesis}
+	category = {mss_team},
+	group = {undergraduate_thesis}
 }
 
 @article{bruckl_graphical_2019,
@@ -29,8 +30,8 @@ MACRO SEISMIC NETWORK
 	date = {2019-03},
 	langid = {english},
 	file = {Brückl - 2019 - Graphical Location of Seismic Sources Based on Amp.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/729FEKQD/Brückl - 2019 - Graphical Location of Seismic Sources Based on Amp.pdf:application/pdf},
-        project = {macro_seismic_network},
-        group = {article}
+	category = {mss_team},
+	group = {article}
 }
 
 @article{bruckl_monitoring_2019,
@@ -48,7 +49,9 @@ MACRO SEISMIC NETWORK
 	month = oct,
 	year = {2019},
 	pages = {431--437},
-	file = {brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/MUFC7JHJ/brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:application/pdf}
+	file = {brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/MUFC7JHJ/brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.pdf:application/pdf},
+	category = {mss_team},
+	group = {article}
 }
 
 @unpublished{bruckl_scientic_2015,
@@ -61,8 +64,8 @@ MACRO SEISMIC NETWORK
 	langid = {english},
 	note = {EGU2015-3401-4},
 	file = {Brückl et al. - 2015 - Scientiﬁc goals of SCHOOLS & QUAKES.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/CZZG75DE/Brückl et al. - 2015 - Scientiﬁc goals of SCHOOLS & QUAKES.pdf:application/pdf},
-        project = {macro_seismic_network},
-        group = {conference}
+	category = {mss_team},
+	group = {conference}
 }
 
 @incollection{bruckl_seismological_2021,
@@ -77,7 +80,9 @@ MACRO SEISMIC NETWORK
 	month = jan,
 	year = {2021},
 	doi = {10.5772/intechopen.95273},
-	file = {Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/T4UH9MRH/Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:application/pdf}
+	file = {Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/T4UH9MRH/Brückl et al. - 2021 - Seismological Data Acquisition and Analysis within.pdf:application/pdf},
+	category = {mss_team},
+	group = {article}
 }
 
 @unpublished{del_puy_papi_isaba_robust_2016,
@@ -89,8 +94,8 @@ MACRO SEISMIC NETWORK
 	date = {2016},
 	note = {EGU2016-10354},
 	file = {del Puy Papi Isaba und Ewald Brückl - 2016 - Robust method to detect and locate local earthquak.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/7EUPSZQ2/del Puy Papi Isaba und Ewald Brückl - 2016 - Robust method to detect and locate local earthquak.pdf:application/pdf;poster_egu2016_mppisaba_Bruckl_Method.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/PWFWYCG9/poster_egu2016_mppisaba_Bruckl_Method.pdf:application/pdf},
-        project = {macro_seismic_network},
-        group = {conference}
+	category = {mss_team},
+	group = {conference}
 }
 
 @unpublished{brueckl_design_2017,
@@ -103,19 +108,8 @@ MACRO SEISMIC NETWORK
 	langid = {english},
 	note = {EGU2016-10354},
 	file = {Brueckl et al. - Design and ﬁrst tests of a Macroseismic Sensor Sys.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/AQKQ2N36/Brueckl et al. - Design and ﬁrst tests of a Macroseismic Sensor Sys.pdf:application/pdf},
-        project = {macro_seismic_network},
-        group = {conference}
-}
-
-@article{bruckl_monitoring_2019,
-	title = {Monitoring  von Sprengerschütterungen mit seismischen „low-cost“ Sensoren},
-	journaltitle = {Berg- und Hüttenmännische Monatshefte},
-	author = {Brückl, Ewald and Hochwartner, Roland and Mertl, Stefan and Stickler, Gerald and Zöhling, Stefan},
-	date = {2019},
-	status = {accepted},
-	file = {brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.docx:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/6PYBBG9Y/brückl_et_al_2019_monitoring_von_sprengerschütterungen_mit_seismischen_„low-cost“_sensoren.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document},
-        project = {macro_seismic_network},
-        group = {article}
+	category = {mss_team},
+	group = {conference}
 }
 
 @report{bruckl_schools_2017,
@@ -129,13 +123,21 @@ MACRO SEISMIC NETWORK
 	author = {Brückl, Ewald and Brückl, Johanna and Umnig, Elke and Weber, Robert},
 	date = {2017-06-30},
 	file = {Brückl et al. - 2017 - Schools & Quakes Abschlussbericht.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/ZF9MK2XK/Brückl et al. - 2017 - Schools & Quakes Abschlussbericht.pdf:application/pdf},
-        project = {test, macro_seismic_network},
-        group = {article}
+	category = {mss_team},
+	group = {report}
 }
 
 
 ##############################################################################
 RELATED
+Content is directly related to the MSS Network
+##############################################################################
+
+
+
+
+##############################################################################
+OTHER
 ##############################################################################
 @article{berka_zur_2015,
 	title = {Zur {Geologie} der großen {Beckengebiete} des {Ostalpenraumes}},
