Added the MSS report 2022. Fixed the VGI paper link.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -85,6 +85,20 @@ Content created or contributed by members of the MSS Team.
 	group = {article}
 }
 
+@article{bruckl_macroseismic_2021,
+	title = {Das {Macroseismic} {Sensor} {Projekt}},
+    url = {https://www.ovg.at/de/bibliothek/vgi-die-zeitschrift/ausgabe/1301/#article5322},
+	volume = {109},
+	language = {de},
+	number = {3},
+	journal = {Österreichische Zeitschrift für Vermessung \& Geoinformation},
+	author = {Brückl, Ewald and Carniel, Peter and Mert, Stefan and Meurers, Rita},
+	year = {2021},
+	pages = {114--130},
+    category = {mss_team},
+	group = {article}
+}
+
 @unpublished{del_puy_papi_isaba_robust_2016,
 	location = {EGU General Assembly, Vienna},
 	title = {Robust method to detect and locate local earthquakes by means of amplitude measurements.},
@@ -127,6 +141,22 @@ Content created or contributed by members of the MSS Team.
 	group = {report}
 }
 
+##############################################################################
+MSS Annual Reports
+##############################################################################
+@techreport{mertl_mss_2023,
+	title = {{MSS} {Jahresbericht} 2022},
+	language = {de},
+	number = {202303-01},
+	institution = {Mertl Research GmbH},
+	author = {Mertl, Stefan and Brückl, Ewald and Carniel, Peter},
+	month = mar,
+	year = {2023},
+	file = {Mertl et al. - MSS Jahresbericht 2022.pdf:/home/stefan/01_gtd/05_dokumente/bibliothek/zotero/storage/4BIFG4XB/Mertl et al. - MSS Jahresbericht 2022.pdf:application/pdf},
+    local_url = {reports/bericht_202303-01_1-0_mss-2022.pdf},
+    category = {mss_team},
+    group = {report}
+}
 
 ##############################################################################
 RELATED
